--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ footer {
   justify-content: flex-start;
   padding: 20px;
 }
+.message{
+  padding: 10px 0px;
+  font-size: 18px;
+}
 
 .cuore{
   padding: 0px 5px;
